# idel

./: ChangeLog  Makefile.in  README  configure  configure.in  run
benchmarks/: Module.mk  bigload.times  bmh.idel  bmh.times  copy.idel  copy.times  dump.idel  fib.idel  fib.times  gen.awk  hotpo.idel  hotpo.ok  hotpo.times  nfib.idel  qsort.idel  qsort.ok  qsort.times  random.idel  random.ok  random.times  rev.idel  rev.times  runbench  sha1.idel  sha1.ok  sha1.times  sieve.idel  sieve.times  tak.idel  tak.times  wc.idel  wc.ok  wc.times
contrib/: idelrun.el
doc/: cvsinstall.text  idelasm.1  idelvm.1  specification.text  tutorial.text
examples/: Module.mk
examples/borednet/: Mstart  (+8 more)
notes/: Ofmt.text  Overview.text  Todo.text  Vm-api.text  roadmap.text  stacks.text
src/: Module.mk  codegen.c  combos  debug.c  gen-combos.sh  gen-combos2  idel.h  idel_porting.h  idel_private.h  idelasm.c  idelvm.c  idelvmmain.c  interleave.c  obj_decode.c  obj_encode.c  opcodes  opcodes.awk  private.names  profile.awk  public.names  todo  utility.c
tests/: Module.mk  absorb.idel  basics.idel  basics.ok  beer.idel  beer.ok  big-token.idel  big-token.ok  blow-stack.failure  blow-stack.idel  bounds1.failure  bounds1.idel  bounds2.failure  bounds2.idel  copy.idel  copy.in  data.idel  data.ok  even.idel  fact.idel  factor.idel  fib-test.idel  fib.idel  frozen1.ok  hello.idel  hotpo-test.idel  hotpo.idel  initial-stack.failure  initial-stack.idel  loop.failure  loop.idel  primes.idel  primes.ok  random.idel  recurse.idel  rev-test.idel  rev-test.ok  rev.idel  save1.idel  save2.idel  (+18 more)
(+19 files in other folders)
