dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/codegen.c)
AC_CONFIG_AUX_DIR(bin)

dnl Checks for programs.  FIXME: need to check for Gnu Make?
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_BIGENDIAN
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
dnl AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strerror strspn strtol strtoul)

AC_OUTPUT(Makefile)
